# clickhouse-antlr4

./: .gitignore  ClickHouseLexer.g4  ClickHouseParser.g4  README.md
.github/actions/setup-antlr/: action.yml
.github/workflows/: corpus-drift.yml  keyword-drift.yml  rust.yml  targets.yml  validate.yml
rust/: .gitignore  Cargo.toml  build.rs
rust/src/: lib.rs  main.rs
tests/: CorpusRunner.java  README.md  run_tests.sh
tests/corpus/access/: alter_user.sql  create_policy.sql  create_profile.sql  create_quota.sql  create_role.sql  create_user.sql  drop_user.sql  grant.sql  grant_role.sql  revoke.sql  set_role.sql
tests/corpus/alter/: add_column.sql  drop_column.sql  modify_column.sql  modify_order_by.sql  modify_query.sql  multi.sql  mutation.sql  partition.sql  rename_column.sql
tests/corpus/backup/: backup.sql  backup_tables.sql  restore.sql  snapshot.sql
tests/corpus/ddl/: check.sql  create_as_select.sql  create_as_table.sql  create_database.sql  create_dictionary.sql  create_index.sql  create_mv.sql  create_mv_refresh.sql  create_table_basic.sql  create_table_full.sql  create_view.sql  describe.sql  drop_table.sql  exchange.sql  exists.sql  optimize.sql  rename.sql  truncate.sql  undrop_table.sql
tests/corpus/explain/: pipeline.sql  plan.sql  query_tree.sql  settings.sql  syntax.sql
tests/corpus/expr/: arithmetic.sql  array_ops.sql  between.sql  case_search.sql  case_when.sql  cast.sql  comparisons.sql  concat.sql  extract.sql  func_calls.sql  in_expr.sql  interval.sql  lambda.sql  lambda_multi.sql  null_checks.sql  unary.sql  (+5 more)
tools/: gen_keywords.py
(+75 files in other folders)
